--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "plua"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
+authors = ["vyPal"]
+description = "Write plugins for the Pumpkin MC Server software in Lua"
 
 [lib]
 crate-type = ["cdylib"]
