--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,11 +21,12 @@ tokio = { version = "1.42", features = ["full"] }
 env_logger = "0.11.6"
 log = "0.4.22"
 rand = "0.9.1"
-mlua = { version = "0.9", features = [
+mlua = { version = "0.10.5", features = [
     "lua54",
     "vendored",
     "serialize",
     "async",
+    "send"
 ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
