--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,15 +15,14 @@ pumpkin-data = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "ma
 pumpkin-protocol = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-protocol" }
 pumpkin-api-macros = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-api-macros" }
 
-async-trait = "0.1.83"
-tokio = { version = "1.42", features = ["full"] }
+async-trait = "0.1.88"
+tokio = { version = "1.45.1", features = ["full"] }
 
-env_logger = "0.11.6"
-log = "0.4.22"
+env_logger = "0.11.8"
+log = "0.4.27"
 rand = "0.9.1"
 mlua = { version = "0.10.5", features = [
-    "lua54",
-    "vendored",
+    "luau",
     "serialize",
     "async",
     "send"
