--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "plua"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
 authors = ["vyPal"]
 description = "Write plugins for the Pumpkin MC Server software in Lua"
@@ -21,12 +21,7 @@ tokio = { version = "1.45.1", features = ["full"] }
 env_logger = "0.11.8"
 log = "0.4.27"
 rand = "0.9.1"
-mlua = { version = "0.10.5", features = [
-    "luau",
-    "serialize",
-    "async",
-    "send"
-] }
+mlua = { version = "0.10.5", features = ["luau", "serialize", "async", "send"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 anyhow = "1.0"
